# ChitraGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
